fix: fix unit tests and postman tests